# tiny-imagenet

./: .coverage  .gitignore  README.md  setup.cfg
.github/workflows/: python-package.yml
tests/: test-dataset.py
tiny_imagenet_torch/: dataset.py
