[metadata]
name = tiny-imagenet-torch
version = attr: tiny_imagenet_torch.__version__
author = Lino Gerlach
author_email = lino.oscar.gerlach@cern.ch
description = TinyImageNet dataset for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ligerlac/tiny-imagenet-torch
project_urls =
    Bug Tracker = https://github.com/ligerlac/tiny-imagenet-torch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.7.0
    torchvision>=0.8.0
    numpy>=1.18.0
    pillow>=8.0.0
    tqdm>=4.50.0

[options.packages.find]
where = .